<resources>
    <string name="app_name">travelapp-2</string>
    <string name="o_zbekiston_bo_ylab_n_sayohat_qiling">O\'zbekiston bo\'ylab \n sayohat qiling</string>
    <string name="o_zbekistondagi_tarixiy_joylarga_nsayohat_qiling">O\'zbekistondagi tarixiy joylarga \nsayohat qiling</string>
    <string name="hdgfsfgsgfjhsfgshdgfhsgfhjdg">hdgfsfgsgfjhsfgshdgfhsgfhjdg</string>
    <string name="tomosha_qilish">Tomosha qilish</string>
    <string name="o_zbekistondagi_nmashhur_joylarga_nsayohat_qiling">O\'zbekistondagi \nmashhur joylarga \nsayohat qiling</string>
    <string name="log_in">Log In</string>
    <string name="viloyat_manzil">Viloyat, manzil ...</string>
    <string name="qidirish">Qidirish</string>
    <string name="asosiy">Asosiy</string>
    <string name="tadqiqot">Tadqiqot</string>
    <string name="saqlash">Saqlash</string>
    <string name="profile">Profile</string>
    <string name="sarlavha">Sarlavha</string>
    <string name="xarita">Xarita</string>
    <string name="har_bir_qadamingiz_tarix_bilan_to_qnashadi">Har bir qadamingiz tarix bilan to\'qnashadi</string>
    <string name="ro_yxatdan_o_tish">Ro\'yxatdan o\'tish</string>
    <string name="ism">Ism</string>
    <string name="email">Email</string>
    <string name="parol">Parol</string>
    <string name="kirish">Kirish</string>
</resources>