<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/bottom_btn1"
        android:title="@string/asosiy"
        android:cnb_background="@color/black"
        android:cnb_iconColor="@color/white"
        />
    <item
        android:id="@+id/explorer"
        android:icon="@drawable/bottom_btn2"
        android:title="@string/tadqiqot"
        android:cnb_background="@color/black"
        android:cnb_iconColor="@color/white"
        />
    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/bottom_btn3"
        android:title="@string/saqlash"
        android:cnb_background="@color/black"
        android:cnb_iconColor="@color/white"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/bottom_btn4"
        android:title="@string/profile"
        android:cnb_background="@color/black"
        android:cnb_iconColor="@color/white"
        />
</menu>