<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/intro_pic" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="412dp"
                    android:layout_height="377dp"
                    android:layout_marginTop="-60dp"
                    android:background="@drawable/top_corner_white"
                    android:orientation="vertical"
                    android:padding="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageView2">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/o_zbekistondagi_nmashhur_joylarga_nsayohat_qiling"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/hdgfsfgsgfjhsfgshdgfhsgfhjdg"
                        android:textAlignment="center"
                        android:textColor="@color/darkGrey"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/introBtn"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/blue_btn_bg"
                        android:padding="16dp"
                        android:text="@string/tomosha_qilish"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/loginBtn"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginVertical="16dp"
                        android:background="@drawable/stroke_blue_bg"
                        android:text="@string/log_in"
                        android:textColor="@color/blue"
                        android:textSize="20sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


